--- a/ten-factors-new/package.json
+++ b/ten-factors-new/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "ten-factors-new",
+  "name": "ten-factors-website-new",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "https://ten-factors.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
