--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "embla-carousel-autoplay": "^8.6.0",
-    "embla-carousel-react": "^8.6.0",
-    "i18next": "^25.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
@@ -46,7 +42,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0",
-    "i18next-browser-languagedetector": "^8.2.0"
+    "gh-pages": "^6.3.0"
   }
 }
